CSS & Basic HTML added, Game & Player class created

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
 	</head>
 	<body>
 		<canvas></canvas>
+		<p id="infos">Waiting for other player...</p>
 	</body>
+	<script src="/socket.io/socket.io.js"></script>
 	<script src="build/build.js"></script>
 </html>
